# lifetracker-dioxus

./: .gitignore  ANDROID_CONFIG.md  ANDROID_SETUP.md  CLAUDE.md  Cargo.toml  Dioxus.toml  LICENSE  Makefile.bat  README.md  REFACTORING_SUMMARY.md  STRUCTURE.md  TAURI_TO_DIOXUS_REFERENCE.md  TimeTracker_项目架构分析.md  biome.json  build.bat  build.ps1  build.rs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.css  tauri.conf.json  time_tracker_development_guide.md  vite.config.ts  警告分析报告.md
.cargo/: config.toml
.cursor/rules/: my-cursor-rules.mdc
_tauri_archive/components/: NotesPage.tsx  Settings.tsx
_tauri_archive/components/Accounting/: AccountsTab.tsx  OverviewTab.tsx
_tauri_archive/components/Animation/: BottomSheet.tsx  GestureWrapper.tsx  InteractiveButton.tsx  PageTransition.tsx  index.ts
_tauri_archive/components/DataManagement/: ConflictResolution.tsx  DataManagement.tsx
_tauri_archive/components/Timing/: CategoryManagement.tsx  Dashboard.tsx  Statistics.tsx  TimingPage.tsx
assets/: tailwind.css
assets/scripts/: tailwind-config.js
assets/styles/: main.css
capabilities/: default.json
docs/: README-警告分析工具.md  TimeTracker_当前架构深度分析.md  TimeTracker_项目架构分析.md  advanced-packaging.md  time_tracker_development_guide.md  警告分析报告.md
icons/: icon.icns
scripts/: cleanup-warnings.ps1
src/: App.tsx  errors.rs  index.css  lib.rs  main.rs  main.tsx  tauri_commands.rs
src/cli/: commands.rs  mod.rs  output.rs
src/components/: About.tsx  AccountingManagement.tsx  CategoryManagement.tsx  Dashboard.tsx  DataManagement.tsx  ErrorBoundary.tsx  NotesPage.tsx  Settings.tsx  Statistics.tsx  SystemPage.tsx  TaskManagement.tsx  TimingPage.tsx  TitleBar.tsx  about.rs  animation.rs  app.rs  app_state_provider.rs  async_utils.rs  common.rs  dashboard.rs  habits.rs  mod.rs  settings.rs  system_page.rs  theme_provider.rs  title_bar.rs
src/components/Accounting/: AccountingPage.tsx  AccountsTab.tsx  FinancialTrendChart.tsx  OverviewTab.tsx  StatsTab.tsx  TransactionsTab.tsx  accounting_page.rs  accounts.rs  mod.rs  overview.rs  stats.rs  transactions.rs  trend_chart.rs
src/components/Animation/: AnimatedList.tsx  BottomSheet.tsx  GestureWrapper.tsx  InteractiveButton.tsx  PageTransition.tsx  TabTransition.tsx  ViewContainer.tsx  index.ts
src/components/DataManagement/: ConflictResolution.tsx  DataBackup.tsx  DataCleanup.tsx  DataExport.tsx  DataImport.tsx  DataManagement.tsx  DataSync.tsx  index.ts
src/components/Notes/: NotesEditor.tsx  NotesLibrary.tsx  NotesOverview.tsx  NotesStats.tsx
src/components/Timing/: CategoryManagement.tsx  Dashboard.tsx  Statistics.tsx  TaskManagement.tsx  TimingPage.tsx  category_management.rs  dashboard.rs  mod.rs  statistics.rs  task_management.rs  timing_page.rs
src/components/data_management/: data_management_page.rs  export.rs  import.rs  mod.rs
src/components/diary/: diary_page.rs  editor.rs  library.rs  mod.rs  overview.rs  stats.rs
src/config/: mod.rs  settings.rs  theme.rs
src/core/: accounting.rs  analytics.rs  category.rs  mod.rs  task.rs  timer.rs
src/core/accounting/: account.rs  analytics.rs  budget.rs  category.rs  mod.rs  transaction.rs  types.rs
src/gui/: app.rs  mod.rs  theme.rs
src/gui/views/: about.rs  categories.rs  dashboard.rs  mod.rs  settings.rs  statistics.rs  tasks.rs
src/hooks/: useDataRefresh.tsx  useRouter.tsx  useScrollbarHiding.tsx  useTheme.tsx
src/storage/: accounting_models.rs  database.rs  database_old.rs  migrations.rs  mod.rs  models.rs  task_models.rs
src/storage/database/: connection.rs  mod.rs  tasks.rs  time_entries.rs  utils.rs
src/sync/: conflict.rs  engine.rs  mod.rs  scheduler.rs
src/sync/engine/: comparator.rs  conflict_resolver.rs  core.rs  integrity_checker.rs  merger.rs  mod.rs  serializer.rs  types.rs  validator.rs
src/sync/providers/: mod.rs  webdav.rs
src/tauri_commands/: accounting.rs  category.rs  config.rs  data_io.rs  mod.rs  notes.rs  statistics.rs  sync.rs  task.rs  timer.rs
src/tauri_commands/accounting/: account.rs  budget.rs  category.rs  mod.rs  statistics.rs  transaction.rs  types.rs
src/tauri_commands/sync/: config.rs  conflicts.rs  history.rs  mod.rs  operations.rs  types.rs  utils.rs
src/tauri_commands/timing/: category.rs  mod.rs  statistics.rs
src/types/: index.ts  router.ts
src/utils/: crypto.rs  date.rs  export.rs  format.rs  import.rs  mod.rs  validation.rs
