[package]
name = "life_tracker"
version = "0.1.0"
edition = "2021"
authors = ["LifeTracker Team"]
description = "A comprehensive life tracking and management application"
license = "MIT"
repository = "https://github.com/user/life_tracker"
readme = "README.md"
keywords = ["life", "tracker", "productivity", "finance", "diary", "rust", "gui"]
categories = ["command-line-utilities", "gui"]
build = "build.rs"

# 打包元数据
[package.metadata]
# Windows 特定配置
[package.metadata.winres]
OriginalFilename = "life_tracker.exe"
LegalCopyright = "Copyright (c) 2025 LifeTracker Team"
ProductName = "LifeTracker"
FileDescription = "综合性生活追踪工具"



[dependencies]
# CLI 依赖
clap = { version = "4.0", features = ["derive", "color"] }
colored = "2.0"

# 数据库
rusqlite = { version = "0.31.0", features = ["backup", "bundled"] }

# 序列化
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.13"
csv = "1.0"

# 时间处理  
chrono = { version = "0.4.38", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 日志
log = "0.4.21"
env_logger = "0.11.3"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 异步
tokio = { version = "1.38.0", features = ["full"] }

# 系统目录
dirs = "5.0"

# 正则表达式
regex = "1.0"

# 随机数
rand = "0.8"

# Tauri 核心依赖
tauri = { version = "2.1", features = ["tray-icon"], optional = true }
tauri-plugin-shell = { version = "2.0", optional = true }
tauri-plugin-notification = { version = "2.0", optional = true }
tauri-plugin-dialog = { version = "2.0", optional = true }



[dev-dependencies]
tempfile = "3.0"



[build-dependencies]
# 跨平台打包工具（可选）
tauri-build = { version = "2.1.0", features = ["codegen"] }

[features]
default = ["tauri"]
tauri = ["dep:tauri", "dep:tauri-plugin-shell", "dep:tauri-plugin-notification", "dep:tauri-plugin-dialog"]

[[bin]]
name = "life_tracker"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
